log
Fri 05 May 2023 12:39:50 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:69:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   69 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
ac31fca
Fri 05 May 2023 12:41:14 PM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
0e3b334
